create deal and contact exception handle
